[gd_scene load_steps=11 format=3 uid="uid://d4agix10t4h5g"]

[ext_resource type="Script" uid="uid://b4se3p7d3wuyi" path="res://player/scripts/player.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://booq0hogpk343" path="res://ASSETS/CHARAC/Main charac/MEYNNNNN.png" id="3_g1dw6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1jxqw"]
radius = 6.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v0iea"]
radius = 16.1245

[sub_resource type="CircleShape2D" id="CircleShape2D_qjkh3"]
radius = 12.0416

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "walk"
length = 0.60001004
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainplayerwalk:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mainplayerwalk:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.60001004),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-29, -13), Vector2(-27, -13), Vector2(-27, -13), Vector2(-27, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mainplayerwalk:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(0.93303144, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}

[sub_resource type="Animation" id="Animation_yw30f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainplayerwalk:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mainplayerwalk:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mainplayerwalk:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mainplayeridle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-26, -15)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("mainplayeridle:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("mainplayeridle:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("mainplayerwalk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mainplayeridle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(-26, -15), Vector2(-28, -15), Vector2(-31, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mainplayeridle:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.5), Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mainplayeridle:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6k8r"]
_data = {
&"RESET": SubResource("Animation_yw30f"),
&"idle": SubResource("Animation_qjkh3"),
&"walk": SubResource("Animation_g1dw6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kb6p2"]
size = Vector2(13.5, 8)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(4, -1)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_rkbax")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-31, -15)
shape = SubResource("CapsuleShape2D_1jxqw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-37, -18)
zoom = Vector2(4, 4)

[node name="DetectionArea" type="Area2D" parent="." groups=["player"]]
position = Vector2(2, -1)
collision_layer = 1024
collision_mask = 2560

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-33, -14)
shape = SubResource("CircleShape2D_v0iea")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(-31, -11)
shape = SubResource("CircleShape2D_qjkh3")

[node name="RotationNode" type="Node2D" parent="."]

[node name="ObjectMarker" type="Marker2D" parent="RotationNode"]
position = Vector2(-20, -13)

[node name="mainplayerwalk" type="Sprite2D" parent="RotationNode"]
visible = false
position = Vector2(-32, -13)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_g1dw6")
hframes = 8
region_enabled = true
region_rect = Rect2(5.4540176, 397.72742, 390.90952, 73.636444)

[node name="mainplayeridle" type="Sprite2D" parent="RotationNode"]
position = Vector2(-26, -15)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_g1dw6")
hframes = 3
frame = 1
region_enabled = true
region_rect = Rect2(5.4540176, 256.81818, 176.36383, 64.54553)

[node name="AnimationPlayer" type="AnimationPlayer" parent="RotationNode"]
libraries = {
&"": SubResource("AnimationLibrary_g6k8r")
}

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-20, -12)
shape = SubResource("RectangleShape2D_kb6p2")

[connection signal="area_entered" from="DetectionArea" to="." method="_on_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_area_exited"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_pickup_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
